--- a/_data/friends.yml
+++ b/_data/friends.yml
@@ -1,4 +1,8 @@
 -
+  name: Tom Pelsmaeker
+  selected: y
+  url: https://tom-pelsmaeker.github.io
+-
   name: Miguel Rios
   selected: y
   url: https://mriosb08.github.io
