--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -7,6 +7,7 @@
   authors: Tom Pelsmaeker and Wilker Aziz
   doc-url: https://arxiv.org/pdf/1904.08194.pdf
   arxiv: https://arxiv.org/abs/1904.08194
+  code: https://github.com/tom-pelsmaeker/deep-generative-lm
 -
   layout: paper
   paper-type: pre-print
