--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -18,6 +18,7 @@
   doc-url: https://arxiv.org/pdf/1904.04676.pdf
   arxiv: https://arxiv.org/abs/1904.04676
   booktitle: "Under review"
+  code: https://github.com/nicola-decao/BNAF
 -
   layout: paper
   paper-type: pre-print
