--- a/_data/probabll.yml
+++ b/_data/probabll.yml
@@ -2,7 +2,7 @@
   name: Wilker Aziz
   selected: y
   role: PI
-  url: https://roxot.github.io
+  url: http://wilkeraziz.github.io/
 -
   name: Bryan Eikema
   selected: y
