--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -13,12 +13,12 @@
   paper-type: inproceedings
   selected: y
   year: 2019
-  title: "Block Neural Autoregressive Flow"
-  authors: "Nicola De Cao, Wilker Aziz and Ivan Titov"
-  doc-url: https://arxiv.org/pdf/1904.04676.pdf
-  arxiv: https://arxiv.org/abs/1904.04676
-  booktitle: "UAI"
-  code: https://github.com/nicola-decao/BNAF
+  title: "Auto-Encoding Variational Neural Machine Translation"
+  authors: "Bryan Eikema and Wilker Aziz"
+  doc-url: //arxiv.org/pdf/1807.10564.pdf
+  arxiv: //arxiv.org/abs/1807.10564 
+  code: //github.com/Roxot/AEVNMT 
+  booktitle: "RepL4NLP"
 -
   layout: paper
   paper-type: inproceedings
@@ -44,19 +44,19 @@
   paper-type: inproceedings
   selected: y
   year: 2019
+  title: "Block Neural Autoregressive Flow"
+  authors: "Nicola De Cao, Wilker Aziz and Ivan Titov"
+  doc-url: https://arxiv.org/pdf/1904.04676.pdf
+  arxiv: https://arxiv.org/abs/1904.04676
+  booktitle: "UAI"
+  code: https://github.com/nicola-decao/BNAF
+-
+  layout: paper
+  paper-type: inproceedings
+  selected: y
+  year: 2019
   title: "Question Answering by Reasoning Across Documents with Graph Convolutional Networks"
   authors: "Nicola De Cao, Wilker Aziz and Ivan Titov"
   doc-url: //arxiv.org/pdf/1808.09920.pdf
   arxiv: //arxiv.org/abs/1808.09920
   booktitle: "NAACL"
--
-  layout: paper
-  paper-type: pre-print
-  selected: y
-  year: 2018
-  title: "Auto-Encoding Variational Neural Machine Translation"
-  authors: "Bryan Eikema and Wilker Aziz"
-  doc-url: //arxiv.org/pdf/1807.10564.pdf
-  arxiv: //arxiv.org/abs/1807.10564 
-  code: //github.com/Roxot/AEVNMT 
-  booktitle: "arXiv:1807.10564"
