--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -15,10 +15,13 @@
   year: 2019
   title: "Auto-Encoding Variational Neural Machine Translation"
   authors: "Bryan Eikema and Wilker Aziz"
-  doc-url: //arxiv.org/pdf/1807.10564.pdf
+  doc-url: https://www.aclweb.org/anthology/W19-4315
   arxiv: //arxiv.org/abs/1807.10564 
   code: //github.com/Roxot/AEVNMT 
   booktitle: "RepL4NLP"
+  bibtex: https://www.aclweb.org/anthology/papers/W/W19/W19-4315.bib
+  code: https://github.com/Roxot/AEVNMT.pt
+  demo: https://github.com/Roxot/AEVNMT.pt/blob/master/demo/AEVNMT.ipynb
 -
   layout: paper
   paper-type: inproceedings
@@ -26,9 +29,11 @@
   year: 2019
   title: "Interpretable Neural Predictions with Differentiable Binary Variables"
   authors: "Joost Bastings, Wilker Aziz and Ivan Titov"
-  doc-url: //arxiv.org/pdf/1905.08160.pdf
+  doc-url: https://www.aclweb.org/anthology/P19-1284
   arxiv: //arxiv.org/abs/1905.08160
   booktitle: "ACL"  
+  bibtex: https://www.aclweb.org/anthology/papers/P/P19/P19-1284.bib
+  code: https://github.com/bastings/interpretable_predictions
 -
   layout: paper
   paper-type: inproceedings
@@ -36,9 +41,10 @@
   year: 2019
   title: "Latent Variable Model for Multi-modal Translation"
   authors: "Iacer Calixto, Miguel Rios and Wilker Aziz"
-  doc-url: //arxiv.org/pdf/1811.00357.pdf
+  doc-url: https://www.aclweb.org/anthology/P19-1642
   arxiv: //arxiv.org/abs/1811.00357
   booktitle: "ACL"
+  bibtex: https://www.aclweb.org/anthology/papers/P/P19/P19-1642.bib
 -
   layout: paper
   paper-type: inproceedings
@@ -57,6 +63,8 @@
   year: 2019
   title: "Question Answering by Reasoning Across Documents with Graph Convolutional Networks"
   authors: "Nicola De Cao, Wilker Aziz and Ivan Titov"
-  doc-url: //arxiv.org/pdf/1808.09920.pdf
+  doc-url: https://www.aclweb.org/anthology/N19-1240
   arxiv: //arxiv.org/abs/1808.09920
   booktitle: "NAACL"
+  bibtex: https://www.aclweb.org/anthology/papers/N/N19/N19-1240.bib
+  
