--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,6 +3,15 @@
   paper-type: pre-print 
   selected: y
   year: 2019
+  title: A Latent Morphology Model for Open-Vocabulary Neural Machine Translation
+  authors: Duygu Ataman and Wilker Aziz and Alexandra Birch
+  doc-url: https://arxiv.org/pdf/1910.13890.pdf
+  arxiv: https://arxiv.org/abs/1910.13890 
+-
+  layout: paper
+  paper-type: pre-print 
+  selected: y
+  year: 2019
   title: Effective Estimation of Deep Generative Language Models
   authors: Tom Pelsmaeker and Wilker Aziz
   doc-url: https://arxiv.org/pdf/1904.08194.pdf
