--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,12 +1,14 @@
 -
   layout: paper
-  paper-type: pre-print 
+  paper-type: inproceedings
   selected: y
-  year: 2019
-  title: A Latent Morphology Model for Open-Vocabulary Neural Machine Translation
+  year: 2020
+  title: A Latent Morphology Model for Open-Vocabulary Neural Machine Translation  
   authors: Duygu Ataman and Wilker Aziz and Alexandra Birch
   doc-url: https://arxiv.org/pdf/1910.13890.pdf
   arxiv: https://arxiv.org/abs/1910.13890 
+  openreview: https://openreview.net/forum?id=BJxSI1SKDH
+  booktitle: "ICLR"
 -
   layout: paper
   paper-type: pre-print 
