--- a/_data/probabll.yml
+++ b/_data/probabll.yml
@@ -9,10 +9,10 @@
   role: PhD candidate
   url: https://roxot.github.io
 -
-  name: Joost Bastings
+  name: Lina Murady
   selected: y
-  role: PhD candidate (joint with Khalil Sima'an and Ivan Titov)
-  url: https://bastings.github.io
+  role: Research assistant
+  url: https://www.illc.uva.nl/People/show_person.php?Person_id=Murady+L.
 -
   name: Nicola De Cao
   selected: y
