--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,6 +1,15 @@
 -
 
   layout: paper
+  paper-type: pre-print
+  selected: y
+  year: 2020
+  title: Is MAP Decoding All You Need? The Inadequacy of the Mode in Neural Machine Translation
+  authors: Bryan Eikema and Wilker Aziz
+  doc-url: https://arxiv.org/pdf/2005.10283.pdf
+  arxiv: https://arxiv.org/abs/2005.10283
+-
+  layout: paper
   paper-type: inproceedings 
   selected: y
   year: 2020
