--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -17,6 +17,7 @@
   doc-url: https://arxiv.org/pdf/1904.08194.pdf
   arxiv: https://arxiv.org/abs/1904.08194
   code: https://github.com/tom-pelsmaeker/deep-generative-lm
+  slides: https://probabll.github.io/slides/acl2020.pdf
 -
   layout: paper
   paper-type: inproceedings
