--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -77,7 +77,7 @@
   selected: y
   year: 2019
   title: "Interpretable Neural Predictions with Differentiable Binary Variables"
-  authors: "Joost Bastings, Wilker Aziz and Ivan Titov"
+  authors: "Jasmijn Bastings, Wilker Aziz and Ivan Titov"
   doc-url: https://www.aclweb.org/anthology/P19-1284
   arxiv: //arxiv.org/abs/1905.08160
   booktitle: "ACL"  
