--- a/_data/prior.yml
+++ b/_data/prior.yml
@@ -31,7 +31,7 @@
   selected: y
   year: 2018
   title: "Modeling Latent Sentence Structure in Neural Machine Translation"
-  authors: "Joost Bastings, Wilker Aziz, Ivan Titov, Khalil Sima'an"
+  authors: "Jasmijn Bastings, Wilker Aziz, Ivan Titov, Khalil Sima'an"
   doc-url: //arxiv.org/pdf/1901.06436.pdf
   arxiv: //arxiv.org/abs/1901.06436
   booktitle: "Extended abstract at ACL's NMT workshop"
@@ -41,7 +41,7 @@
   selected: y
   year: 2017
   title: "Graph Convolutional Encoders for Syntax-aware Neural Machine Translation"
-  authors: "Joost Bastings, Ivan Titov, Wilker Aziz, Diego Marcheggiani, Khalil Sima'an"
+  authors: "Jasmijn Bastings, Ivan Titov, Wilker Aziz, Diego Marcheggiani, Khalil Sima'an"
   doc-url: https://www.aclweb.org/anthology/D17-1209 
   arxiv: https://arxiv.org/pdf/1704.04675.pdf 
   slides: /slides/emnlp2017.pdf
