--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -45,6 +45,7 @@
   arxiv: https://arxiv.org/abs/1904.08194
   code: https://github.com/tom-pelsmaeker/deep-generative-lm
   slides: https://probabll.github.io/slides/acl2020.pdf
+  talk: https://surfdrive.surf.nl/files/index.php/s/I6ucSILYX4DaUg9
   booktitle: "ACL"
 -
   layout: paper
