--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,6 +3,15 @@
   paper-type: pre-print
   selected: y
   year: 2020
+  title: Efficient Marginalization of Discrete and Structured Latent Variables via Sparsity
+  authors: Gonçalo M. Correia, Vlad Niculae, Wilker Aziz, and André F. T. Martins
+  doc-url: https://arxiv.org/pdf/2007.01919.pdf
+  arxiv: https://arxiv.org/abs/2007.01919
+-
+  layout: paper
+  paper-type: pre-print
+  selected: y
+  year: 2020
   title: Is MAP Decoding All You Need? The Inadequacy of the Mode in Neural Machine Translation
   authors: Bryan Eikema and Wilker Aziz
   doc-url: https://arxiv.org/pdf/2005.10283.pdf
@@ -25,6 +34,7 @@
   authors: Nicola De Cao and Wilker Aziz
   doc-url: https://arxiv.org/pdf/2006.04437.pdf
   arxiv: https://arxiv.org/abs/2006.04437
+  booktitle: "ICML Workshop on Invertible Neural Networks, Normalizing Flows, and Explicit Likelihood Models"
 -
   layout: paper
   paper-type: pre-print
@@ -41,11 +51,11 @@
   year: 2020
   title: Effective Estimation of Deep Generative Language Models
   authors: Tom Pelsmaeker and Wilker Aziz
-  doc-url: https://arxiv.org/pdf/1904.08194.pdf
+  doc-url: https://www.aclweb.org/anthology/2020.acl-main.646/
   arxiv: https://arxiv.org/abs/1904.08194
   code: https://github.com/tom-pelsmaeker/deep-generative-lm
   slides: https://probabll.github.io/slides/acl2020.pdf
-  talk: https://surfdrive.surf.nl/files/index.php/s/I6ucSILYX4DaUg9
+  talk: https://youtu.be/6TU2t4ZMnwE
   booktitle: "ACL"
 -
   layout: paper
@@ -69,7 +79,6 @@
   arxiv: //arxiv.org/abs/1807.10564 
   code: //github.com/Roxot/AEVNMT 
   booktitle: "RepL4NLP"
-  bibtex: https://www.aclweb.org/anthology/papers/W/W19/W19-4315.bib
   code: https://github.com/Roxot/AEVNMT.pt
   demo: https://github.com/Roxot/AEVNMT.pt/blob/master/demo/AEVNMT.ipynb
 -
@@ -82,7 +91,6 @@
   doc-url: https://www.aclweb.org/anthology/P19-1284
   arxiv: //arxiv.org/abs/1905.08160
   booktitle: "ACL"  
-  bibtex: https://www.aclweb.org/anthology/papers/P/P19/P19-1284.bib
   code: https://github.com/bastings/interpretable_predictions
 -
   layout: paper
@@ -94,7 +102,6 @@
   doc-url: https://www.aclweb.org/anthology/P19-1642
   arxiv: //arxiv.org/abs/1811.00357
   booktitle: "ACL"
-  bibtex: https://www.aclweb.org/anthology/papers/P/P19/P19-1642.bib
 -
   layout: paper
   paper-type: inproceedings
@@ -115,6 +122,5 @@
   authors: "Nicola De Cao, Wilker Aziz and Ivan Titov"
   doc-url: https://www.aclweb.org/anthology/N19-1240
   arxiv: //arxiv.org/abs/1808.09920
-  booktitle: "NAACL"
-  bibtex: https://www.aclweb.org/anthology/papers/N/N19/N19-1240.bib
+  booktitle: "NAACL"  
   
