--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -27,7 +27,7 @@
   arxiv: https://arxiv.org/abs/2004.14992
 -
   layout: paper
-  paper-type: pre-print
+  paper-type: inproceedings
   selected: y
   year: 2020
   title: The Power Spherical Distribution 
