--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
-  - title: "About"
-    url: /
+  - title: "Events"
+    url: /events/
   - title: "Papers"
     url: /papers/
   - title: "Code"
