--- a/_data/probabll.yml
+++ b/_data/probabll.yml
@@ -14,6 +14,11 @@
   role: Research assistant
   url: https://www.illc.uva.nl/People/show_person.php?Person_id=Murady+L.
 -
+  name: Eelco van der Wel
+  selected: y
+  role: Research assistant
+  url: https://github.com/EelcovdW
+-
   name: Nicola De Cao
   selected: y
   role: PhD candidate (joint with Ivan Titov)
