--- a/_data/bda.yml
+++ b/_data/bda.yml
@@ -1,5 +1,5 @@
 -
   selected: y
-  title: Time for a Change: a Tutorial for Comparing Multiple Classifiers Through Bayesian Analysis
+  title: "Time for a Change: a Tutorial for Comparing Multiple Classifiers Through Bayesian Analysis"
   doc-url: https://jmlr.org/papers/volume18/16-305/16-305.pdf
   when: October 15, 3pm
