--- a/_data/bda.yml
+++ b/_data/bda.yml
@@ -3,3 +3,4 @@
   title: "Time for a Change: a Tutorial for Comparing Multiple Classifiers Through Bayesian Analysis"
   doc-url: https://jmlr.org/papers/volume18/16-305/16-305.pdf
   when: October 15, 3pm
+  remark: Our goal is to discuss Sections 1 and 2 in detail, maybe start Section 3.
