--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,25 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wilkeraziz
 github_username:  probabll
 locale: "en"
+repository: "probabll/probabll.github.io"
 
 # Build settings
 markdown: kramdown
-remote_theme: "mmistakes/minimal-mistakes@4.15.2"
+remote_theme: mmistakes/minimal-mistakes
 minimal_mistakes_skin: "air"
+timezone: Europe/Amsterdam  
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+
+
+include:
+  - _pages
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -51,3 +62,24 @@ author:
         - label: "GitHub"
           icon: "fab fa-fw fa-github"
           url: "https://github.com/probabll"
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: false
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
