--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -8,6 +8,7 @@
   booktitle: "Coling (to appear)"
   doc-url: https://arxiv.org/pdf/2005.10283.pdf
   arxiv: https://arxiv.org/abs/2005.10283
+  note: Outstanding Paper.
 -
   layout: paper
   paper-type: inproceedings
