--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -20,6 +20,26 @@
   layout: paper
   paper-type: inproceedings
   selected: y
+  year: 2021
+  title: Editing Factual Knowledge in Language Models
+  authors: Nicola De Cao, Wilker Aziz, and Ivan Titov
+  booktitle: EMNLP 
+  doc-url: https://arxiv.org/pdf/2104.08164.pdf
+  arxiv: https://arxiv.org/abs/2104.08164
+-
+  layout: paper
+  paper-type: inproceedings
+  selected: y
+  year: 2021
+  title: Highly Parallel Autoregressive Entity Linking with Discriminative Correction
+  authors: Nicola De Cao, Wilker Aziz, and Ivan Titov
+  booktitle: EMNLP 
+  doc-url: 
+  arxiv: 
+-
+  layout: paper
+  paper-type: inproceedings
+  selected: y
   year: 2020
   title: Is MAP Decoding All You Need? The Inadequacy of the Mode in Neural Machine Translation
   authors: Bryan Eikema and Wilker Aziz
