--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -7,6 +7,7 @@
   authors: Bryan Eikema and Wilker Aziz
   doc-url: https://arxiv.org/pdf/2108.04718.pdf
   arxiv: https://arxiv.org/abs/2108.04718
+  code: https://github.com/Roxot/mbr-nmt
 -
   layout: paper
   paper-type: pre-print
@@ -16,6 +17,7 @@
   authors: António Farinhas, Wilker Aziz, Vlad Niculae, and André F. T. Martins
   doc-url: https://arxiv.org/pdf/2108.02658.pdf
   arxiv: https://arxiv.org/abs/2108.02658
+  code: https://github.com/probabll/mixed-rv-vae
 -
   layout: paper
   paper-type: inproceedings
@@ -26,6 +28,7 @@
   booktitle: EMNLP 
   doc-url: https://arxiv.org/pdf/2104.08164.pdf
   arxiv: https://arxiv.org/abs/2104.08164
+  code: https://github.com/nicola-decao/KnowledgeEditor
 -
   layout: paper
   paper-type: inproceedings
@@ -36,6 +39,7 @@
   booktitle: EMNLP 
   doc-url: 
   arxiv: 
+  code: https://github.com/nicola-decao/efficient-autoregressive-EL
 -
   layout: paper
   paper-type: inproceedings
@@ -47,6 +51,7 @@
   doc-url: https://www.aclweb.org/anthology/2020.coling-main.398/
   arxiv: https://arxiv.org/abs/2005.10283
   best: y
+  code: https://github.com/Roxot/bayesian-length-analysis
 -
   layout: paper
   paper-type: inproceedings
@@ -58,6 +63,7 @@
   doc-url: https://papers.nips.cc/paper/2020/hash/887caadc3642e304ede659b734f79b00-Abstract.html
   arxiv: https://arxiv.org/abs/2007.01919
   spotlight: y
+  code: https://github.com/deep-spin/sparse-marginalization-lvm
 -
   layout: paper
   paper-type: inproceedings
@@ -68,6 +74,7 @@
   authors: Nicola De Cao, Michael Schlichtkrull, Wilker Aziz, and Ivan Titov
   doc-url: https://www.aclweb.org/anthology/2020.emnlp-main.262/
   arxiv: https://arxiv.org/abs/2004.14992
+  code: https://github.com/nicola-decao/diffmask
 -
   layout: paper
   paper-type: pre-print
@@ -88,6 +95,7 @@
   arxiv: https://arxiv.org/abs/2006.04437
   booktitle: "ICML Workshop on Invertible Neural Networks, Normalizing Flows, and Explicit Likelihood Models"
   slides: https://probabll.github.io/slides/innf2020.pdf
+  code: https://github.com/nicola-decao/power_spherical
 -
   layout: paper
   paper-type: inproceedings 
