--- a/_data/probabll.yml
+++ b/_data/probabll.yml
@@ -10,12 +10,12 @@
   url: https://roxot.github.io
 -
   name: Lina Murady
-  selected: y
+  selected: n
   role: Research assistant
   url: https://www.illc.uva.nl/People/show_person.php?Person_id=Murady+L.
 -
   name: Eelco van der Wel
-  selected: y
+  selected: n
   role: Research assistant
   url: https://github.com/EelcovdW
 -
@@ -23,3 +23,8 @@
   selected: y
   role: PhD candidate (joint with Ivan Titov)
   url: https://nicola-decao.github.io
+-  
+  name: Pedro Ferreira
+  selected: y
+  role: PhD candidate
+  url: https://roxot.github.io
