--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -13,6 +13,14 @@
   layout: paper
   paper-type: pre-print
   selected: y
+  year: 2022
+  title: Statistical Model Criticism of Variational Auto-Encoders
+  authors: Claartje Barkhof and Wilker Aziz
+  arxiv: https://arxiv.org/abs/2204.03030
+-
+  layout: paper
+  paper-type: pre-print
+  selected: y
   year: 2021
   title: Sampling-Based Minimum Bayes Risk Decoding for Neural Machine Translation
   authors: Bryan Eikema and Wilker Aziz
