--- a/_data/dlnlp.yml
+++ b/_data/dlnlp.yml
@@ -2,7 +2,7 @@
   selected: y
   title: Model Criticism for Long-Form Text Generation
   doc-url: https://arxiv.org/abs/2210.08444 
-  when: November 2, 2022
+  when: 02/11/22 16:30, L6.51
   minutes:
   talk:
   slides:
