--- a/_data/dlnlp.yml
+++ b/_data/dlnlp.yml
@@ -3,7 +3,7 @@
   title: "Contrastive Decoding: Open-ended Text Generation as Optimization"
   doc-url: https://arxiv.org/abs/2210.15097
   when: 04/11/22 15:00, L6.51
-  minutes: "Some related work: [Su and Collier, 2022](https://arxiv.org/abs/2210.14140)."
+  minutes:
   talk:
   slides:
   data:
