--- a/_data/dlnlp.yml
+++ b/_data/dlnlp.yml
@@ -2,7 +2,7 @@
   selected: y
   title: "Adaptive Label Smoothing with Self-Knowledge in Natural Language Generation"
   doc-url: https://arxiv.org/abs/2210.13459
-  when: 18/11/22 15:00
+  when: 18/11/22 15:00, C3.2-11 (SP904)
   minutes:
   talk:
   slides:
