--- a/_data/friends.yml
+++ b/_data/friends.yml
@@ -1,4 +1,8 @@
 -
+  name: Nicola De Cao
+  selected: y
+  url: https://nicola-decao.github.io
+-
   name: Gonçalo Correia
   selected: y
   url: https://goncalomcorreia.github.io
