--- a/_data/dlnlp.yml
+++ b/_data/dlnlp.yml
@@ -1,4 +1,9 @@
 - selected: y
+  title: "Chain-of-Thought Prompting Elicits Reasoning in Large Language Models"
+  doc-url: https://arxiv.org/abs/2201.11903
+  when: 17/02/23 15:00, L6.51
+
+- selected: y
   title: "Do Bayesian Neural Networks Need To Be Fully Stochastic?"
   doc-url: https://arxiv.org/abs/2211.06291
   when: 02/12/22 15:00, L6.51
