--- a/_data/dlnlp.yml
+++ b/_data/dlnlp.yml
@@ -1,4 +1,14 @@
 - selected: y
+  title: "“Will You Find These Shortcuts?” A Protocol for Evaluating the Faithfulness of Input Salience Methods for Text Classification"
+  doc-url: https://aclanthology.org/2022.emnlp-main.64/
+  when: 2/3 15:00, L2.07
+
+- selected: y
+  title: "Epistemic Neural Networks"
+  doc-url: https://arxiv.org/abs/2107.08924
+  when: 23/2 15:00, L2.07
+
+- selected: y
   title: "Chain-of-Thought Prompting Elicits Reasoning in Large Language Models"
   doc-url: https://arxiv.org/abs/2201.11903
   when: 17/02/23 15:00, L6.51
