--- a/_data/dlnlp.yml
+++ b/_data/dlnlp.yml
@@ -1,4 +1,14 @@
 - selected: y
+  title: "A Statistical Analysis of Summarization Evaluation Metrics Using Resampling Methods"
+  doc-url: https://direct.mit.edu/tacl/article/doi/10.1162/tacl_a_00417/107833/A-Statistical-Analysis-of-Summarization-Evaluation
+  when: 04/10/23 14:00, L6.51 and probabll.zoom
+
+- selected: y
+  title: "The impact of results blind science publishing on statistical consultation and evaluation"
+  doc-url: https://www.tandfonline.com/doi/abs/10.1080/00031305.2018.1505658
+  when: 20/09/23 15:30, L6.51 and probabll.zoom
+
+- selected: y
   title: "Moving to a World Beyond 'p < 0.05'"
   doc-url: https://www.tandfonline.com/doi/full/10.1080/00031305.2019.1583913
   when: 13/09/23 14:00, L6.51 and probabll.zoom
