--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,7 +3,7 @@
   paper-type: inproceedings
   selected: y
   year: 2024
-  title: "Predict the Next Word: <Humans exhibit uncertainty in this task and language models _____>"
+  title: "Predict the Next Word: `Humans exhibit uncertainty in this task and language models _____`"
   authors: Evgenia Ilia and Wilker Aziz 
   doc-url: 
   arxiv: 
