--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -5,8 +5,8 @@
   year: 2024
   title: "Predict the Next Word: `Humans exhibit uncertainty in this task and language models _____`"
   authors: Evgenia Ilia and Wilker Aziz 
-  doc-url: 
-  arxiv: 
+  doc-url: https://arxiv.org/pdf/2402.17527.pdf
+  arxiv: https://arxiv.org/abs/2402.17527
   code: 
   booktitle: EACL 
 -
