--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -249,6 +249,7 @@
   doc-url: https://arxiv.org/pdf/1904.04676.pdf
   arxiv: https://arxiv.org/abs/1904.04676
   booktitle: "UAI"
+  spotlight: y
   code: https://github.com/nicola-decao/BNAF
 -
   layout: paper
