--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -27,7 +27,8 @@
   year: 2024
   title: The Effect of Generalisation on the Inadequacy of the Mode 
   authors: Bryan Eikema 
-  doc-url: 
+  doc-url: https://aclanthology.org/2024.uncertainlp-1.9 
+  video: https://aclanthology.org/2024.uncertainlp-1.9.mp4
   arxiv: 
   code: 
   booktitle: UncertaiNLP at EACL 
